bootstrap3-select: Fix a bug that causes select dropdown not showing in rtl

--- a/bootstrap3-select/bootstrap-select.css
+++ b/bootstrap3-select/bootstrap-select.css
@@ -482,10 +482,6 @@ select.selectpicker {
 .right-to-left .row .bootstrap-select[class*="col-"].dropdown-menu-right {
   float: left;
 }
-.right-to-left .bootstrap-select.bs-container {
-  left: unset;
-  right: 0;
-}
 .right-to-left .bootstrap-select .dropdown-toggle .filter-option {
   left: unset;
   right: 0;
